@@ -20,7 +20,6 @@
 
 package cascading.flow.stream;
 
-import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -78,9 +77,9 @@ public class TrapHandler
         trapCollector = flowProcess.openTrapForWrite( trap );
         trapCollectors.put( trap, trapCollector );
         }
-      catch( IOException exception )
+      catch( Throwable throwable )
         {
-        throw new DuctException( exception );
+        throw new TrapException( "could not open trap: " + trap.getIdentifier(), throwable );
         }
       }
 
@@ -175,6 +174,9 @@ public class TrapHandler
     if( cause instanceof OutOfMemoryError )
       handleReThrowableException( "caught OutOfMemoryException, will not trap, rethrowing", cause );
 
+    if( cause instanceof TrapException )
+      handleReThrowableException( "unable to write trap data, will not trap, rethrowing", cause );
+
     if( trap == null )
       handleReThrowableException( "caught Throwable, no trap available, rethrowing", throwable );
 
@@ -201,7 +203,14 @@ public class TrapHandler
     if( diagnostics != TupleEntry.NULL ) // prepend diagnostics, payload is variable
       payload = diagnostics.appendNew( payload );
 
-    trapCollector.add( payload );
+    try
+      {
+      trapCollector.add( payload );
+      }
+    catch( Throwable current )
+      {
+      throw new TrapException( "could not write to trap: " + trap.getIdentifier(), current );
+      }
 
     flowProcess.increment( StepCounters.Tuples_Trapped, 1 );
 
