@@ -2,6 +2,9 @@ Cascading Change Log
 
 2.7.0 [unreleased]
 
+  Fixed issue where a failure to open or write a trap would pass the throwable up to the prior trap. Failures on trap
+  io will now result in a c.f.Flow failure.
+
   Fixed issue where c.t.TupleEntry#setTuple( Tuple tuple ) and c.t.TupleEntry#setCanonicalTuple( Tuple tuple ) would
   cause an NPE if given an null argument.
 
